--- a/FoodPin/Storyboard/Base.lproj/Main.storyboard
+++ b/FoodPin/Storyboard/Base.lproj/Main.storyboard
@@ -414,10 +414,10 @@
             </objects>
             <point key="canvasLocation" x="1965.217391304348" y="219.64285714285714"/>
         </scene>
-        <!--View Controller-->
+        <!--Map View Controller-->
         <scene sceneID="Wkh-zj-LQd">
             <objects>
-                <viewController id="IRL-ie-9XE" sceneMemberID="viewController">
+                <viewController id="IRL-ie-9XE" customClass="MapViewController" customModule="FoodPin" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="naf-V6-JL6">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -435,7 +435,12 @@
                             <constraint firstItem="NFH-0g-Pzk" firstAttribute="leading" secondItem="aIY-l0-pRJ" secondAttribute="leading" id="uTs-Ak-CNZ"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="XMg-TL-Pas"/>
+                    <navigationItem key="navigationItem" id="XMg-TL-Pas">
+                        <barButtonItem key="backBarButtonItem" title="Recipe book" image="back" id="Ljy-6T-LP2"/>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="mapView" destination="NFH-0g-Pzk" id="TPu-GW-mBl"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ghh-nW-Dbz" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -461,6 +466,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="back" width="29" height="17"/>
         <image name="caskpubkitchen" width="480" height="480"/>
         <image name="donostia" width="480" height="480"/>
         <image name="heart-tick" width="22" height="21"/>
