--- a/FoodPin/Storyboard/Base.lproj/Main.storyboard
+++ b/FoodPin/Storyboard/Base.lproj/Main.storyboard
@@ -435,11 +435,7 @@
                             <constraint firstItem="NFH-0g-Pzk" firstAttribute="leading" secondItem="aIY-l0-pRJ" secondAttribute="leading" id="uTs-Ak-CNZ"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="XMg-TL-Pas">
-                        <barButtonItem key="backBarButtonItem" title="←Recipe book" id="Edk-HD-bmG" userLabel="Recipe book">
-                            <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        </barButtonItem>
-                    </navigationItem>
+                    <navigationItem key="navigationItem" id="XMg-TL-Pas"/>
                     <connections>
                         <outlet property="mapView" destination="NFH-0g-Pzk" id="TPu-GW-mBl"/>
                     </connections>
